# deep

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini  main.cpp  run.bat
core/: deep_window.cpp  deep_window.h  game.cpp  game.h  window.h
include/glad/: glad.h
ressources/models/: center.blend  center.glb  cube.blend  cube.glb  floor.blend  floor.glb  player.blend  player.glb  wall.blend  wall.glb  wall_0.blend  wall_1.blend  wall_1.glb  wall_2.blend  wall_2.glb  wall_2_door.blend  wall_2_door.glb  wall_3.blend  wall_3.glb  wall_4.blend  wall_4.glb  wall_4_door.blend  wall_4_door.glb  wall_5.blend  wall_5.glb  wall_6.blend  wall_6.glb  wall_6_door.blend  wall_6_door.glb  wall_7.blend  wall_7.glb  wall_8.blend  wall_8.glb  wall_8_door.blend  wall_8_door.glb  wall_9.blend  wall_9.glb
shaders/: fragment.glsl  fragment.spv  vertex.glsl  vertex.spv
src/: CMakeLists.txt  assets.cpp  assets.h  camera.cpp  camera.h  camera.odin  data.h  data.odin  engine.h  game.odin  main.cpp  main.odin  render.cpp  render.h  render.odin
src/core/: game.cpp  game.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  window.cpp  window.h
src/deep/: camera.odin  data.odin  engine.odin  game.odin  render.odin
